--- a/ports/javascript/Makefile
+++ b/ports/javascript/Makefile
@@ -1,47 +1,60 @@
 include ../../py/mkenv.mk
 
-CROSS = 0
-
 QSTR_DEFS = qstrdefsport.h
 
 include $(TOP)/py/py.mk
-
-CC = emcc
-LD = emcc
 
 INC += -I.
 INC += -I$(TOP)
 INC += -I$(BUILD)
 
-CPP = clang -E
 
-JSFLAGS ?= -O0 -g4 --source-map-base http://localhost:8080
-LDFLAGS ?= -m32
+CFLAGS += -Wall -Werror $(INC) -std=gnu11 $(COPT)
+CFLAGS += -fdata-sections -ffunction-sections
+CFLAGS += $(CFLAGS_MOD)
+
+JSFLAGS += -s WASM=0
+JSFLAGS += --memory-init-file 0 --js-library library.js
+JSFLAGS += -s EXTRA_EXPORTED_RUNTIME_METHODS="['ccall', 'cwrap']"
+JSFLAGS += -s EXPORTED_FUNCTIONS="['_mp_js_init', '_mp_js_init_repl',\
+ '_mp_js_do_str', '_mp_js_process_char',\
+ '_mp_hal_get_interrupt_char', '_mp_keyboard_interrupt' ]"
+
 
 ifdef EMSCRIPTEN
-	CPP += -isystem $(EMSCRIPTEN)/system/include/libc -cxx-isystem $(EMSCRIPTEN)/system/include/libcxx
 
+	#Debugging/Optimization
+	ifeq ($(DEBUG), 1)
+	CFLAGS += -O0 -g4
+	else
+	CFLAGS += -Oz -g0 -DNDEBUG
+	endif
+	
+	#check if not using emscripten-upstream branch
 	ifeq (,$(findstring upstream/bin, $(EMMAKEN_COMPILER)))
 		JSFLAGS += -s "BINARYEN_TRAP_MODE='clamp'"
-		LDFLAGS += -Wl,-Map=$@.map,--cref -Wl,--gc-sections
-	else
-		LDFLAGS += -Wl,--gc-sections
 	endif  
-endif
 
+	#default debug options for browser debugger
+	JSFLAGS ?= --source-map-base http://localhost:8000
+	
+	CC = emcc $(JSFLAGS)
+	LD = emcc $(JSFLAGS) $(LDFLAGS)
+	CPP = clang -E -undef -D__CPP__ -D__EMSCRIPTEN__ -U__STDC_VERSION__
+	CPP += --sysroot $(EMSCRIPTEN)/system
+	CPP += -include $(BUILD)/clang_predefs.h
+	CPP += $(addprefix -isystem, $(shell env LC_ALL=C $(CC) $(CFLAGS_EXTRA) -E -x c++ /dev/null -v 2>&1\
+ |sed -e '/^\#include <...>/,/^End of search/{ //!b };d'))
+ 
 
-CFLAGS = -m32 -Wall -Werror $(INC) -std=c99 $(COPT)
-
-
-
-CFLAGS += -DNDEBUG
-CFLAGS += -fdata-sections -ffunction-sections
-
-ifneq ($(FROZEN_MPY_DIR),)
-# To use frozen bytecode, put your .py files in a subdirectory (eg frozen/) and
-# then invoke make with FROZEN_MPY_DIR=frozen (be sure to build from scratch).
-CFLAGS += -DMICROPY_QSTR_EXTRA_POOL=mp_qstr_frozen_const_pool
-CFLAGS += -DMICROPY_MODULE_FROZEN_MPY
+else
+	ifdef CLANG
+		CC=clang
+		CPP=clang -E -D__CPP__
+	else
+		CC = gcc
+		CPP = gcc -E -D__CPP__
+	endif
 endif
 
 SRC_LIB = $(addprefix lib/,\
@@ -56,21 +69,28 @@ SRC_C = \
 	mphalport.c \
 	modutime.c \
 
-SRC_QSTR += $(SRC_C)
 
-OBJ = 
+SRC_C += $(SRC_MOD)
+
+SRC_QSTR += $(BUILD)/clang_predefs.h $(SRC_C) $(SRC_LIB)
+
 OBJ = $(PY_O) 
 OBJ += $(addprefix $(BUILD)/, $(SRC_LIB:.c=.o))
 OBJ += $(addprefix $(BUILD)/, $(SRC_C:.c=.o))
 
-JSFLAGS += -s EXPORTED_FUNCTIONS="['_mp_js_init', '_mp_js_init_repl', '_mp_js_do_str', '_mp_js_process_char', '_mp_hal_get_interrupt_char', '_mp_keyboard_interrupt']" -s EXTRA_EXPORTED_RUNTIME_METHODS="['ccall', 'cwrap']" --memory-init-file 0 --js-library library.js
+$(BUILD)/clang_predefs.h:
+	$(Q)mkdir -p $(dir $@)
+	$(Q)emcc $(CFLAGS) $(CFLAGS_EXTRA) $(JSFLAGS) -E -x c /dev/null -dM > $@
 
-	
+# Create `clang_predefs.h` as soon as possible, using a Makefile trick
+
+Makefile: $(BUILD)/clang_predefs.h
+
 all: $(BUILD)/micropython.js
 
 $(BUILD)/micropython.js: $(OBJ) library.js wrapper.js
 	$(ECHO) "LINK $(BUILD)/firmware.js"
-	$(Q)emcc $(LDFLAGS) -o $(BUILD)/firmware.js $(OBJ) $(JSFLAGS)
+	$(Q)$(LD) -o $(BUILD)/firmware.js $(OBJ)
 	cat wrapper.js $(BUILD)/firmware.js > $@
 
 min: $(BUILD)/micropython.js
@@ -78,6 +98,13 @@ min: $(BUILD)/micropython.js
 
 test: $(BUILD)/micropython.js $(TOP)/tests/run-tests
 	$(eval DIRNAME=ports/$(notdir $(CURDIR)))
-	cd $(TOP)/tests && MICROPY_MICROPYTHON=../ports/javascript/node_run.sh ./run-tests
+
+# works with wasm + no nlr
+	cd $(TOP)/tests &&\
+ MICROPY_CPYTHON3=python3 MICROPY_MICROPYTHON=../$(DIRNAME)/node_run.sh ./run-tests-exp.sh
+
+# often broken !
+#	cd $(TOP)/tests && MICROPY_CPYTHON3=python3 MICROPY_MICROPYTHON=../$(DIRNAME)/node_run.sh ./run-tests
 
 include $(TOP)/py/mkrules.mk
+
