Revert "Merge pull request #7 from micropython/master"
This reverts commit 9011aeebd9707703123a454f0dd3480d1f494568, reversing
changes made to 296fb1b785a36b93363df69813374f2ae65cde61.

--- a/.gitignore
+++ b/.gitignore
@@ -20,10 +20,9 @@
 ######################
 *.swp
 
-# Build directories
+# Build directory
 ######################
 build/
-build-*/
 
 # Test failure outputs
 ######################
